<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XX摄影</string>
    <string name="action_settings">Settings</string>
    <string name="titlebar_userinfo_login">登录</string>
    <string name="default_block_4_icon_alt">icon4</string>
    <string name="default_block_4_name">我的手机拍</string>
    <string name="default_block_4_number">4</string>
    <string name="default_block_3_name">手机拍比赛</string>
    <string name="default_block_3_number">3</string>
    <string name="default_block_3_icon_alt">icon3</string>
    <string name="default_block_2_number">2</string>
    <string name="default_block_2_name_1">手机</string>
    <string name="default_block_2_name_2">拍摄与上传</string>
    <string name="default_block_2_icon_alt">icon2</string>
    <string name="default_block_1_number">1</string>
    <string name="default_block_1_name">手机拍展示</string>
    <string name="default_block_1_icon_alt">icon1</string>
    <string name="user_login_login_btn_name">登录</string>
    <string name="user_login_reg_btn_name">注册</string>
    <string name="user_login_edittext_username_defaultvalue">手机</string>
    <string name="user_login_edittext_userpass_defaultvalue">密码</string>
    <string name="user_login_title">会员登录</string>
    <string name="user_login_tips_no_username">请输入手机号码</string>
    <string name="user_login_tips_no_userpass">请输入密码</string>
    <string name="user_login_result_begin">开始登录</string>
    <string name="user_login_result_success">登录成功</string>
    <string name="user_login_result_failure">登录失败，请检查您的手机或密码是否正确</string>
    <string name="user_login_result_failure_for_network">登录失败，网络出错，请稍后再试</string>


    <string name="user_register_login_btn_name">登录</string>
    <string name="user_register_reg_btn_name">注册</string>
    <string name="user_register_edittext_username_defaultvalue">手机</string>
    <string name="user_register_edittext_userpass_defaultvalue">密码</string>
    <string name="user_register_title">会员注册</string>
    <string name="user_register_tips_no_username">请输入手机号码</string>
    <string name="user_register_tips_no_userpass">请输入密码</string>
    <string name="user_register_result_begin">开始注册</string>
    <string name="user_register_result_success">注册成功</string>
    <string name="user_register_result_failure">注册失败</string>
    <string name="user_register_result_failure_for_network">注册失败，网络出错，请稍后再试</string>


    <string name="user_info_title">会员信息</string>
    <string name="default_block_5_name">往期比赛</string>
    <string name="default_block_6_name">XX币充值</string>
    <string name="default_block_6_icon_alt">icon6</string>
    <string name="default_block_5_icon_alt">icon5</string>
    <string name="user_album_list_all_title">手机拍展示</string>
    <string name="user_album_create_title">上传作品</string>
    <string name="user_album_create_user_album_name_default_value">标题</string>
    <string name="user_album_create_user_album_intro_default_value">介绍</string>
    <string name="user_album_create_user_album_button_confirm_text">确认</string>
    <string name="user_album_create_user_album_button_cancel_text">取消</string>
    <string name="message_upload_begin">开始上传</string>
    <string name="message_upload_success">上传成功</string>
    <string name="message_upload_failure">上传失败</string>
    <string name="message_load_begin">开始加载</string>
    <string name="message_load_success">加载成功</string>
    <string name="message_load_failure">加载失败</string>
    <string name="message_load_user_error">会员验证出错，请重新登录！</string>
    <string name="message_takephoto_nosdcard">没有检查到存储卡，不能拍摄照片</string>
    <string name="message_user_album_create_useralbumname_is_null">请输入作品标题</string>
    <string name="message_user_album_create_useralbumtype_is_null">未读取到作品分类</string>
    <string name="message_user_album_create_useralbumpic_is_null">没有拍摄或选择照片，请选择后操作</string>
    <string name="user_album_create_select_useralbumtype_title">分类</string>
    <string name="user_album_create_progressdialog_title">上传作品</string>
    <string name="user_album_create_progressdialog_content">正在上传，请稍等</string>
    <string name="user_album_create_progressdialog_button_text">确定</string>
    <string name="user_album_list_mine_titlebar">我的手机拍</string>
    <string name="user_album_pic_list_lasttips">已经是最后一张了</string>
    <string name="user_album_pic_list_begin_save_pic">开始保存图片</string>
    <string name="user_album_pic_list_success_save_pic">保存图片成功</string>
    <string name="user_album_pic_list_fail_save_pic">保存失败</string>
    <string name="user_album_pic_list_vote">投票</string>
    <string name="user_album_pic_list_vote_dialog_title">是否为此作品投票</string>
    <string name="user_album_pic_list_vote_dialog_message">您当前剩余乐图币：{user_point}，投票需花费10个乐图币，是否投票?</string>
    <string name="user_album_pic_list_vote_dialog_confirm">投票</string>
    <string name="user_album_pic_list_vote_dialog_cancel">取消</string>
    <string name="user_album_pic_list_vote_result_success">投票成功，扣除{user_point}乐图币</string>
    <string name="user_album_pic_list_vote_result_fail">投票失败，本次操作未扣除乐图币</string>
    <string name="user_album_pic_list_vote_result_has_vote">您已经投过票了，本次操作未扣除乐图币</string>
    <string name="user_album_pic_list_vote_result_no_user_point">您的乐图币不够了，请充值后操作</string>
    <string name="user_album_pic_list_vote_result_error_user">会员验证出错，请重新登录，本次操作未扣除乐图币</string>


    <string name="activity_list_all_title">手机拍比赛</string>
    <string name="activity_join">我要报名</string>
    <string name="activity_view_album">参赛作品投票</string>
    <string name="activity_list_btn_my_joined_activity">我参加的比赛</string>
    <string name="activity_list_btn_my_voted_activity">我投票的比赛</string>


    <string name="activity_list_of_end_title">往期比赛</string>
    <string name="activity_list_of_end_no_data">没有往期比赛</string>



    <string name="activity_list_of_mine_joined_title">我参加的比赛</string>
    <string name="activity_list_of_mine_joined_no_data">您还没有参加任何比赛</string>
    <string name="activity_cancel">取消报名</string>
    <string name="activity_view_user_album">查看我参赛的作品</string>
    <string name="activity_list_of_mine_btn_all_activity">全部比赛</string>


    <string name="activity_list_of_mine_voted_title">我投票的比赛</string>
    <string name="activity_list_of_mine_voted_no_data">您还没有对任何作品投票</string>

    <string name="activity_list_of_mine_voted_button_view_my_voted_album">我投票的作品</string>

    <string name="activity_album_select_title">选择参加比赛的作品</string>
    <string name="activity_album_select_confirm">确认</string>
    <string name="activity_album_select_submit_activity_user_success">报名成功</string>

    <string name="activity_album_list_title">参赛作品</string>
    <string name="activity_album_list_view_mine_voted">查看我投票的作品</string>


    <string name="activity_album_list_of_mine_title">我参赛的作品</string>


    <string name="activity_vote_record_of_my_voted_title">我投票的作品</string>



    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_update_tips">更新于:</string>


    <string name="client_app_title">软件更新</string>
    <string name="client_app_confirm_to_update">马上更新</string>
    <string name="client_app_cancel_to_update">暂不更新</string>
    <string name="client_app_never_to_update">不再提示</string>



</resources>
